--- a/package.json
+++ b/package.json
@@ -65,15 +65,12 @@
         "webpack-md5-hash": "0.0.6"
     },
     "dependencies": {
-        "@emotion/react": "^11.11.1",
-        "@emotion/styled": "^11.11.0",
         "@material-ui/icons": "^4.11.3",
         "@mui/material": "^5.13.5",
         "@mui/x-data-grid": "^6.8.0",
         "@reduxjs/toolkit": "^1.6.1",
         "@types/lodash": "^4.14.149",
         "axios": "^0.18.1",
-        "babel-plugin-syntax-dynamic-import": "^6.18.0",
         "babel-polyfill": "^6.26.0",
         "classnames": "^2.2.6",
         "crypto-js": "^3.3.0",
@@ -82,23 +79,14 @@
         "gapi-script": "0.0.5",
         "google-map-react": "^2.1.10",
         "jquery": "^3.4.1",
-        "lodash": "^4.17.15",
-        "moment": "^2.24.0",
-        "moment-timezone": "^0.5.28",
         "react": "^16.12.0",
-        "react-breadcrumbs": "^2.1.7",
-        "react-dom": "^16.4.0",
-        "react-draggable": "^4.4.2",
-        "react-elastic-carousel": "^0.11.5",
         "react-error-boundary": "^3.1.4",
         "react-localization": "^1.0.15",
         "react-redux": "^7.2.2",
-        "react-router": "^4.3.1",
         "react-router-dom": "^6.10.0",
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
-        "sass": "^1.62.1",
-        "styled-components": "^5.3.5"
+        "sass": "^1.62.1"
     }
 }
